Adjusted initial POC

--- a/strategies/DCA_FNG_Simulation.ipynb
+++ b/strategies/DCA_FNG_Simulation.ipynb
@@ -2,100 +2,207 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "5c686b1b-c22f-4844-b2e6-df44bdcbd796",
+   "execution_count": 55,
+   "id": "1b2e2f3a-5816-4f8f-a1af-8a9d9006c7cf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>close</th>\n",
+       "      <th>volume</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>FNG_Index</th>\n",
+       "      <th>Classification</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1679356800000</td>\n",
+       "      <td>27717.01</td>\n",
+       "      <td>28438.55</td>\n",
+       "      <td>27303.1</td>\n",
+       "      <td>28105.47</td>\n",
+       "      <td>420929.7422</td>\n",
+       "      <td>2023-03-21</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>Greed</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       timestamp      open      high      low     close       volume  \\\n",
+       "0  1679356800000  27717.01  28438.55  27303.1  28105.47  420929.7422   \n",
+       "\n",
+       "         Date  FNG_Index Classification  \n",
+       "0  2023-03-21       68.0          Greed  "
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "id": "f334ddd8-faea-4ee1-be70-c4ac12aaa581",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import pandas as pd\n",
+    "\n",
     "# 1. Load data\n",
-    "df = pd.read_csv('../data/BTC_FNG_merged.csv')"
+    "pd.set_option('display.max_rows', None)\n",
+    "df = pd.read_csv('../data/BTC_FNG_merged.csv')\n",
+    "\n",
+    "df.head(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "b83a2cb8-57c8-4a3b-a458-891eb4f27eb3",
+   "execution_count": 56,
+   "id": "76ae358b-cdd8-41fe-8d70-c76e9f82f5ec",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>close</th>\n",
+       "      <th>volume</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>FNG_Index</th>\n",
+       "      <th>Classification</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>999</th>\n",
+       "      <td>1765670400000</td>\n",
+       "      <td>90240.0</td>\n",
+       "      <td>90472.4</td>\n",
+       "      <td>88497.02</td>\n",
+       "      <td>88721.21</td>\n",
+       "      <td>6873.17705</td>\n",
+       "      <td>2025-12-14</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>Extreme Fear</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         timestamp     open     high       low     close      volume  \\\n",
+       "999  1765670400000  90240.0  90472.4  88497.02  88721.21  6873.17705   \n",
+       "\n",
+       "           Date  FNG_Index Classification  \n",
+       "999  2025-12-14       21.0   Extreme Fear  "
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Define starting capital\n",
-    "starting_capital = 14700"
+    "df.tail(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "d6968d12-d47a-4e86-a4f4-e28275e61e20",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 2. Initialize\n",
-    "portfolio_value = [starting_capital]\n",
-    "holdings = 0\n",
-    "cash = starting_capital"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "id": "be3d08eb-4909-4bfb-beeb-a9d206b8aaf9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def calculate_signal(df, i):\n",
-    "    # Buy every 7 days\n",
-    "    if i % 7 == 0:\n",
-    "        return 'BUY'\n",
-    "    else:\n",
-    "        return 'HOLD'\n",
-    "     "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "id": "11cc5180-e9c8-4810-8df1-428445963f26",
+   "execution_count": 57,
+   "id": "2e471e5b-5771-489b-b182-7d08da640726",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Final portfolio value: $24774.53\n",
-      "ROI: 68.53%\n"
+      "Total invested: $14300.00\n",
+      "Final portfolio value: $23899.49\n",
+      "Gain/Loss: $9599.49\n",
+      "ROI: 67.13%\n"
      ]
     }
    ],
    "source": [
-    "# 3. Loop through data\n",
-    "\n",
+    "# Initialize\n",
     "dca_amount = 100  # Buy $100 worth every 7 days\n",
+    "total_invested = 0\n",
+    "holdings = 0\n",
     "\n",
+    "portfolio_value = []\n",
+    "invested_amount = []\n",
+    "\n",
+    "def calculate_signal(df, i):\n",
+    "    # Buy every 7 days\n",
+    "    if i % 7 == 0:\n",
+    "        return 'BUY'\n",
+    "    else:\n",
+    "        return 'HOLD'\n",
+    "     \n",
+    "# 3. Loop through data\n",
     "for i in range(len(df)):\n",
     "    price = df['close'].iloc[i]\n",
+    "    fng = \n",
     "    signal = calculate_signal(df, i)\n",
     "    \n",
-    "    if signal == 'BUY' and cash >= dca_amount:\n",
+    "    if signal == 'BUY':\n",
     "        shares = dca_amount / price\n",
     "        holdings += shares\n",
-    "        cash -= dca_amount  # Subtract only the DCA amount, not all cash\n",
+    "        total_invested += dca_amount\n",
     "    \n",
-    "    current_value = cash + (holdings * price)\n",
+    "    current_value = holdings * price\n",
     "    portfolio_value.append(current_value)\n",
+    "    invested_amount.append(total_invested)\n",
     "\n",
     "# Print results\n",
+    "print(f\"Total invested: ${total_invested:.2f}\")\n",
     "print(f\"Final portfolio value: ${portfolio_value[-1]:.2f}\")\n",
-    "print(f\"ROI: {((portfolio_value[-1] - starting_capital) / starting_capital * 100):.2f}%\")"
+    "print(f\"Gain/Loss: ${(portfolio_value[-1] - total_invested):.2f}\")\n",
+    "print(f\"ROI: {((portfolio_value[-1] - total_invested) / total_invested * 100):.2f}%\")"
    ]
   }
  ],
